# robot_remote_control

./: .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  README.md  VERSION  compile_protobuf_from_source.bash  install_dependencies.sh  install_source_dependencies.sh  manifest.xml  package.xml
bindings/python/: CMakeLists.txt  Readme.md  RobotControllerWrapper.hpp  _robot_remote_control.pxd  _transport_zmq.pxd  init.py  robot_remote_control.pyx  setup.py.in  transport_zmq.pyx
examples/: CMakeLists.txt  ControlledRobotMain.cpp  ControlledRobotWebMain.cpp  JointControllerMain.cpp  RobotControllerMain.cpp
examples/CLI/: CMakeLists.txt  ConsoleCommands.cpp  ConsoleCommands.hpp  RobotControllerCLI.cpp
examples/extending/: CMakeLists.txt  ExtendedControlledRobotMain.cpp  ExtendedMessageTypes.hpp  ExtendedRobotControllerMain.cpp  ExtendedTelemetryBuffer.cpp  ExtendedTelemetryBuffer.hpp  README.md
examples/extending/ControlledRobot/: CMakeLists.txt  ExtendedControlledRobot.cpp  ExtendedControlledRobot.hpp
examples/extending/RobotController/: CMakeLists.txt  ExtendedRobotController.cpp  ExtendedRobotController.hpp
examples/extending/examples/: CMakeLists.txt  ExtendedControlledRobotMain.cpp
examples/extending/src/: CMakeLists.txt  ExtendedMessageTypes.hpp  ExtendedRobotControllerMain.cpp
examples/extending/src/ControlledRobot/: CMakeLists.txt  ExtendedControlledRobot.cpp  ExtendedControlledRobot.hpp
examples/extending/src/RobotController/: CMakeLists.txt  ExtendedRobotController.cpp  ExtendedRobotController.hpp
examples/extending/src/Types/: CMakeLists.txt  myrobot.pb.cc  myrobot.pb.h  myrobot.proto
examples/extending/test/: CMakeLists.txt  TypeGenerator.hpp  test_Communication.cpp
examples/html/: Readme.md  index.html  simpleactions.html
examples/html/js/: robot_remote_control.js
examples/python/: robotcontroller.py
examples/udt_transport/: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp
robot_remote_control/: CMakeLists.txt  RingBuffer.hpp  robot_remote_control-transport_zmq.pc.in
robot_remote_control/Transports/: Transport.hpp
robot_remote_control/UpdateThread/: CMakeLists.txt  ThreadProtectedVar.hpp  UpdateThread.cpp
src/: CMakeLists.txt  CommandBuffer.hpp  ControlledRobot.cpp  ControlledRobot.hpp  ControlledRobotMain.cpp  ControllerMain.cpp  Dummy.cpp  Dummy.hpp  Main.cpp  MessageTypes.hpp  RingBuffer.hpp  RobotController.cpp  RobotController.hpp  RobotControllerMain.cpp  RobotMain.cpp  Serialization.hpp  SimpleBuffer.hpp  SimpleSensorBuffer.cpp  SimpleSensorBuffer.hpp  Statistics.cpp  Statistics.hpp  TelemetryBuffer.cpp  TelemetryBuffer.hpp  TypeGenerator.hpp  interaction-library-robot_controller.pc.in  robot_remote_control-compression.pc  robot_remote_control-config.cmake  robot_remote_control-controlled_robot.pc.in  robot_remote_control-robot_controller.pc.in  robot_remote_control-send_timers.pc.in  robot_remote_control-simple_action_helper.pc.in  robot_remote_control-types.pc.in  robot_remote_control-update_thread.pc.in
src/CLI/: CMakeLists.txt  CameraViewer.cpp  ConsoleCommands.cpp  ConsoleCommands.hpp  RobotControllerCLI.cpp  VirtualJoystick.cpp
src/ControlledRobot/: CMakeLists.txt  ControlledRobot.cpp  ControlledRobot.hpp
src/RobotController/: CMakeLists.txt  RobotController.cpp  RobotController.hpp
src/Tools/: CMakeLists.txt  Compression.cpp  Compression.hpp  README.md  SendTimerSimpleActions.cpp  SendTimerSimpleActions.hpp  SendTimers.cpp  SendTimers.hpp  SimpleActionHelper.cpp  SimpleActionHelper.hpp  TelemetryCallbackThread.hpp
src/Tools/PlotjugglerDataStream/: CMakeLists.txt  DataStreamRRC.cpp  DataStreamRRC.hpp
src/TransportWrappers/: CMakeLists.txt  Readme.md  TransportWrapper.hpp
src/TransportWrappers/Gzip/: CMakeLists.txt  TransportWrapperGzip.cpp
src/TransportWrappers/MultiTransport/: CMakeLists.txt  MultiTransport.cpp  MultiTransport.hpp
src/Transports/: CMakeLists.txt  Readme.md  Transport.hpp  TransportUDT.cpp  TransportUDT.hpp  TransportWebSocket.cpp  TransportWebSocket.hpp  TransportWrapper.hpp  TransportWrapperGzip.cpp  TransportWrapperGzip.hpp  TransportZmq.cpp  TransportZmq.hpp  ZMQProxyMain.cpp
src/Transports/Http/: CMakeLists.txt  RestServer.cpp  RestServer.hpp  TransportHttp.cpp  TransportHttp.hpp
src/Transports/UDT/: CMakeLists.txt  TransportUDT.cpp  TransportUDT.hpp
src/Transports/WebSocket/: CMakeLists.txt  TransportWebSocket.cpp  TransportWebSocket.hpp
src/Transports/ZeroMQ/: CMakeLists.txt
src/Types/: CMakeLists.txt  RobotRemoteControl.pb.cc  RobotRemoteControl.pb.h  RobotRemoteControl.proto  controlledRobot.proto
src/Types/Conversions/: CMakeLists.txt  Readme.md
src/Types/Conversions/rock/: ContactState.hpp  Eigen.hpp  IMUSensors.hpp  Image.hpp  Joints.hpp  LaserScan.hpp  MLS.hpp  Motion2d.hpp  Pointcloud.hpp  Pose.hpp  RigidBodyState.hpp  RigitBodyState.hpp  SubTrajectory.hpp  Time.hpp  Transform.hpp  Twist.hpp  Wrenches.hpp  rock.hpp
src/Types/Conversions/rock/Conversions/: Eigen.hpp  (+2 more)
src/Types/Conversions/ros/: Header.hpp  JointState.hpp
src/Types/Conversions/ros2/: Header.hpp
src/UpdateThread/: AtomicClass.hpp  CMakeLists.txt  LockableClass.hpp  ThreadProtectedVar.hpp  Timer.cpp  Timer.hpp  UpdateThread.cpp  UpdateThread.hpp
src/WireProtocol/: WireProtocol.hpp  WireProtocolReply.cpp  WireProtocolReply.hpp
test/: CMakeLists.txt  Transports.cpp  Transports.hpp  TypeGenerator.hpp  suite.cpp  test_Communication.cpp  test_Dummy.cpp  test_RingBuffer.cpp  test_SendTimers.cpp  test_SimpleActionHelper.cpp  test_Thread.cpp  test_TransportSupport.cpp  test_UDT.cpp
test/performance/: CMakeLists.txt  ControlledRobotMain.cpp  RobotControllerMain.cpp
test/testfiles/: topfolderfile
test/testfiles/model/: model.urdf
test/testfiles/subfolder/: subfolderfile
tutorial/: CMakeLists.txt  Readme.md  tutorial1_ControlledRobot.cpp  tutorial1_RobotController.cpp  tutorial2_ControlledRobot.cpp  tutorial2_RobotController.cpp  tutorial3_ControlledRobot.cpp  tutorial3_RobotController.cpp  tutorial4_ControlledRobot.cpp  tutorial4_RobotController.cpp
(+43 files in other folders)
