<?xml version="1.0"?>
<package format="2">
  <name>interaction-library-controlled_robot</name>
  <version>0.0.0</version>
  <description>cmake macros</description>

  <maintainer email="leif.christensen@dfki.de">Leif Christensen</maintainer>

  <author email="tom.creutz@dfki.de">Tom Creutz</author>

  <license>TBD</license>

  <!-- <buildtool_depend>catkin</buildtool_depend> -->

  <build_depend>base-cmake</build_depend>
  <build_depend>interaction-types</build_depend>
  <!-- <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>message_to_tf</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend> -->
</package>
