<?xml version="1.0"?>
<package format="2">
  <name>robot_remote_control</name>
  <version>0.0.0</version>
  <description>cmake macros</description>

  <maintainer email="steffen.planthaber@dfki.de">Steffen Planthaber</maintainer>

  <author email="steffen.planthaber@dfki.de">Steffen Planthaber</author>

  <license>BSD-3-Clause</license>

  <build_depend>libzmq3-dev</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>readline-dev</build_depend>
  
	<export>
		<build_type>cmake</build_type>
	</export>
  
</package>
